--- a/package.json
+++ b/package.json
@@ -1,10 +1,11 @@
 {
-  "name": "quantboost_technology",
-  "version": "0.1.0",
+  "name": "GilliozDreamLabs",
+  "version": "1.0.0",
   "private": true,
   "dependencies": {
     "@notionhq/client": "^2.2.15",
     "dotenv": "^16.4.5",
+    "motion": "^11.12.0",
     "next": "^14.1.4",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
