--- a/.github/workflows/publish-docker.yaml
+++ b/.github/workflows/publish-docker.yaml
@@ -41,12 +41,9 @@ jobs:
           type=sha
         labels: |
           org.opencontainers.image.title=${{ env.IMAGE_NAME }}
-          org.opencontainers.image.description=A description for your project
+          org.opencontainers.image.description=Gillioz DreamLabs Web App
           org.opencontainers.image.version={{version}}
-        flavor: |
-          latest=true
-          prefix=true
-          
+
     - name: Display metadata
       run: |
         echo "Docker Tags: ${{ steps.meta.outputs.tags }}"
