--- a/.github/workflows/publish-docker.yaml
+++ b/.github/workflows/publish-docker.yaml
@@ -37,6 +37,11 @@ jobs:
       with:
         github-token: ${{ secrets.DOCKER_PASSWORD }}
         images: ${{ env.REGISTRY }}/${{ env.IMAGE_NAME }}
+        tags: |
+        type=ref,event=branch
+        type=sha,format=short
+        type=ref,event=tag
+        type=ref,event=branch,prefix=latest
     
     - name: Access Metadata
       run: |
