--- a/.github/workflows/publish-docker.yaml
+++ b/.github/workflows/publish-docker.yaml
@@ -1,50 +1,56 @@
 name: Build and Push Image to Github Container Registry
 
 on:
+  push:
+    branches:
+      - main
+      - staging
+      - dev
   [workflow_dispatch]
-  # pull_request:
-  #   branches: [ "staging" ]
 
 env:
   REGISTRY: ghcr.io
   IMAGE_NAME: 0xsimbadev/gilliozdreamlabs
 
 jobs:
-
   build-and-push-image:
     runs-on: ubuntu-latest
 
     permissions:
       contents: read
       packages: write
-      attestations: write
       id-token: write
 
     steps:
-    - name: Checkout code
-      uses: actions/checkout@v4
+      - name: Checkout code
+        uses: actions/checkout@v4
 
-    - name: Log in to the Container registry
-      uses: docker/login-action@v2
-      with:
-        registry: ${{ env.REGISTRY }}
-        username: ${{ github.actor }}
-        password: ${{ secrets.DOCKER_PASSWORD }}
-        
-    - name: Extract metadata (tags, labels) for Docker
-      id: meta
-      uses: docker/metadata-action@v5
-      with:
-        github-token: ${{ secrets.DOCKER_PASSWORD }}
-        images: ${{ env.REGISTRY }}/${{ env.IMAGE_NAME }}
-        tags: |
-          type=ref,event=branch
-          type=sha,format=short
-          type=ref,event=tag
-          type=semver,pattern={{version}}
-          type=ref,event=branch,prefix=latest,filter=^main$
-    
-    - name: Access Metadata
-      run: |
-        echo "Tags: ${{ steps.meta.outputs.tags }}"
-        echo "Labels: ${{ steps.meta.outputs.labels }}"
+      - name: Log in to the Container Registry
+        uses: docker/login-action@v2
+        with:
+          registry: ${{ env.REGISTRY }}
+          username: ${{ github.actor }}
+          password: ${{ secrets.DOCKER_PASSWORD }}
+
+      - name: Extract metadata (tags, labels) for Docker
+        id: meta
+        uses: docker/metadata-action@v5
+        with:
+          github-token: ${{ secrets.DOCKER_PASSWORD }}
+          images: ${{ env.REGISTRY }}/${{ env.IMAGE_NAME }}
+          tags: |
+            type=ref,event=branch,filter=^main$,prefix=latest # Tag `main` as `latest`
+            type=ref,event=branch # Tag other branches (e.g., dev, staging) with branch names
+            type=sha,format=short # Add a short SHA-based tag for traceability
+
+      - name: Access Metadata
+        run: |
+          echo "Tags: ${{ steps.meta.outputs.tags }}"
+          echo "Labels: ${{ steps.meta.outputs.labels }}"
+
+      - name: Build and Push Docker Image
+        uses: docker/build-push-action@v5
+        with:
+          context: .
+          push: true
+          tags: ${{ steps.meta.outputs.tags }}
