--- a/.github/workflows/publish-docker.yaml
+++ b/.github/workflows/publish-docker.yaml
@@ -6,7 +6,11 @@ on:
       - main
       - staging
       - dev
-  workflow_dispatch:
+  pull_request:
+    branches:
+      - main
+      - staging
+      - dev
 
 env:
   REGISTRY: ghcr.io
